// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/repository/init/merge detectRepoFileConfig() finds .github/renovate.json 1`] = `
Object {
  "configFileName": ".github/renovate.json",
  "configFileParsed": Object {},
}
`;

exports[`workers/repository/init/merge detectRepoFileConfig() finds .gitlab/renovate.json 1`] = `
Object {
  "configFileName": ".gitlab/renovate.json",
  "configFileParsed": Object {},
}
`;

exports[`workers/repository/init/merge detectRepoFileConfig() finds .renovaterc.json 1`] = `
Object {
  "configFileName": ".renovaterc.json",
  "configFileParsed": Object {},
}
`;

exports[`workers/repository/init/merge detectRepoFileConfig() finds .renovaterc.json 2`] = `
Object {
  "configFileName": ".renovaterc.json",
  "configFileParsed": "{\\"something\\":\\"new\\"}",
}
`;

exports[`workers/repository/init/merge detectRepoFileConfig() finds and parse renovate.json5 1`] = `
Object {
  "configFileName": "renovate.json5",
  "configFileParsed": Object {},
}
`;

exports[`workers/repository/init/merge detectRepoFileConfig() returns config if not found 1`] = `Object {}`;

exports[`workers/repository/init/merge detectRepoFileConfig() returns error if cannot parse 1`] = `
Object {
  "configFileName": "renovate.json",
  "configFileParseError": Object {
    "validationError": "Invalid JSON (parsing failed)",
    "validationMessage": "Syntax error near cannot par",
  },
}
`;

exports[`workers/repository/init/merge detectRepoFileConfig() throws error if duplicate keys 1`] = `
Object {
  "configFileName": ".renovaterc",
  "configFileParseError": Object {
    "validationError": "Duplicate keys in JSON",
    "validationMessage": "\\"Syntax error: duplicated keys \\\\\\"enabled\\\\\\" near \\\\\\": false }\\"",
  },
}
`;

exports[`workers/repository/init/merge detectRepoFileConfig() uses package.json config if found 1`] = `
Object {
  "configFileName": "package.json",
  "configFileParsed": Object {
    "prHourlyLimit": 10,
  },
}
`;

exports[`workers/repository/init/merge detectRepoFileConfig() uses package.json config if found 2`] = `
Object {
  "configFileName": "package.json",
  "configFileParsed": undefined,
}
`;

exports[`workers/repository/init/merge mergeRenovateConfig() throws error if misconfigured 1`] = `[Error: config-validation]`;
